[tool.poetry]
name = "belote_api"
version = "0.1.0"
description = "Flask API for belote"
authors = ["Florian CARRA"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
numpy = "^1.19.4"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pandas = "^1.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
